--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,10 @@ install:
   - pip install psycopg2
   - python setup.py develop
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
-  - psql travis_ci_test -c 'CREATE EXTENSION postgis' -U postgres
+  - createdb -U postgres template_postgis
+  - psql -c 'CREATE EXTENSION postgis' -U postgres template_postgis
+  - createdb -U postgres travis_ci_test
+  - psql -c 'CREATE EXTENSION postgis' -U postgres travis_ci_test
   - django-admin.py syncdb --settings settings --noinput
 script:
   - python runtests.py
