--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 install:
   - pip install $DJANGO
   - pip install psycopg2
-  - python setup.py develop
+  - pip install -e .[test]
 before_script:
   - createdb -U postgres template_postgis
   - psql -c 'CREATE EXTENSION postgis' -U postgres template_postgis
