--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 python:
+  # @see http://lucumr.pocoo.org/2013/5/21/porting-to-python-3-redux/
+  - "2.6"
   - "2.7"
   - "3.3"
   - "3.4"
