--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 env:
   - DJANGO="Django>=1.5,<1.6"
   - DJANGO="Django>=1.6,<1.7"
-  - DJANGO="https://www.djangoproject.com/download/1.7c1/tarball/"
+  - DJANGO="Django>=1.7,<1.8"
 # - DJANGO="git+https://github.com/django/django.git@master#egg=django"
 matrix:
   exclude:
