--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
   exclude:
     # @see https://docs.djangoproject.com/en/dev/releases/1.7/#python-compatibility
     - python: "2.6"
-      env: DJANGO="https://www.djangoproject.com/download/1.7c1/tarball/"
+      env: DJANGO="Django>=1.7,<1.8"
 install:
   - pip install $DJANGO
   - pip install psycopg2
