--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ install:
   - pip install $DJANGO
   - pip install psycopg2
   - pip install -e .[test]
+  - pip install coveralls
 before_script:
   - createdb -U postgres template_postgis
   - psql -c 'CREATE EXTENSION postgis' -U postgres template_postgis
@@ -26,4 +27,6 @@ before_script:
   - psql -c 'CREATE EXTENSION postgis' -U postgres travis_ci_test
   - django-admin.py syncdb --settings settings --noinput
 script:
-  - python runtests.py
+  - coverage run --source=boundaries runtests.py
+after_success:
+  coveralls
