--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
+sudo: false
 language: python
+cache: pip
 python:
   # @see http://lucumr.pocoo.org/2013/5/21/porting-to-python-3-redux/
   - "2.6"
