--- a/tox.ini
+++ b/tox.ini
@@ -4,4 +4,4 @@ ignore=E124,E128,E501,F403
 # E128 continuation line under-indented for visual indent
 # E501 line too long (X > 79 characters)
 # F403 'from xyz import *' used; unable to detect undefined names
-exclude = boundaries/south_migrations
+exclude = boundaries/migrations,boundaries/south_migrations
