--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
   - DJANGO="Django>=1.5,<1.6"
   - DJANGO="Django>=1.6,<1.7"
   - DJANGO="Django>=1.7,<1.8"
+  - DJANGO="Django>=1.8,<1.9"
 # - DJANGO="git+https://github.com/django/django.git@master#egg=django"
 matrix:
   exclude:
