--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ matrix:
     # @see https://docs.djangoproject.com/en/dev/releases/1.7/#python-compatibility
     - python: "2.6"
       env: DJANGO="Django>=1.7,<1.8"
+    - python: "2.6"
+      env: DJANGO="Django>=1.8,<1.9"
 install:
   - pip install $DJANGO
   - pip install psycopg2
