--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,15 @@ matrix:
     # @see https://docs.djangoproject.com/en/dev/releases/1.7/#python-compatibility
     - python: "2.6"
       env: DJANGO="Django>=1.7,<1.8"
+    # @see https://docs.djangoproject.com/en/dev/releases/1.8/#python-compatibility
     - python: "2.6"
       env: DJANGO="Django>=1.8,<1.9"
+    - python: "3.5"
+      env: DJANGO="Django>=1.5,<1.6"
+    - python: "3.5"
+      env: DJANGO="Django>=1.6,<1.7"
+    - python: "3.5"
+      env: DJANGO="Django>=1.7,<1.8"
 install:
   - pip install $DJANGO
   - pip install psycopg2
