--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ python:
   - "3.5"
   - "3.6"
 env:
-  - DJANGO="Django>=1.8,<1.9"
   - DJANGO="Django>=1.9,<1.10"
   - DJANGO="Django>=1.10,<1.11"
+  - DJANGO="Django=1.11b1"
 # - DJANGO="git+https://github.com/django/django.git@master#egg=django"
 install:
   - pip install $DJANGO
