Travis: test on Postgres 9.5

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ env:
   - DJANGO="Django>=1.10,<1.11"
   - DJANGO="Django=1.11b1"
 # - DJANGO="git+https://github.com/django/django.git@master#egg=django"
+addons:
+  postgresql: "9.5"
 install:
   - pip install $DJANGO
   - pip install psycopg2
