--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ python:
 env:
   - DJANGO="Django>=1.9,<1.10"
   - DJANGO="Django>=1.10,<1.11"
-  - DJANGO="Django=1.11b1"
+  - DJANGO="Django==1.11b1"
 # - DJANGO="git+https://github.com/django/django.git@master#egg=django"
 addons:
   postgresql: "9.5"
