--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,13 @@ python:
 env:
   - DJANGO="Django>=1.9,<1.10"
   - DJANGO="Django>=1.10,<1.11"
-  - DJANGO="Django==1.11b1"
+  - DJANGO="Django>=1.11,<1.12"
 # - DJANGO="git+https://github.com/django/django.git@master#egg=django"
 addons:
   postgresql: "9.5"
+  apt:
+    packages:
+      - postgresql-9.5-postgis-2.3
 install:
   - pip install $DJANGO
   - pip install psycopg2
