--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: python
 cache: pip
 python:
   # @see http://lucumr.pocoo.org/2013/5/21/porting-to-python-3-redux/
-  # @see https://docs.djangoproject.com/en/dev/releases/1.10/#python-compatibility
+  # @see https://docs.djangoproject.com/en/dev/releases/1.11/#python-compatibility
   - "2.7"
   - "3.4"
   - "3.5"
@@ -13,6 +13,11 @@ env:
   - DJANGO="Django>=1.11,<1.12"
   - DJANGO="Django>=2.0,<=2.1"
 # - DJANGO="git+https://github.com/django/django.git@master#egg=django"
+matrix:
+  # @see https://docs.djangoproject.com/en/dev/releases/2.0/#python-compatibility
+  exclude:
+  - python: "2.7"
+    env: DJANGO="Django>=2.0,<=2.1"
 addons:
   postgresql: "9.5"
   apt:
