--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
   - "3.6"
 env:
   - DJANGO="Django>=1.11,<1.12"
-  - DJANGO="Django>=2.0,<=2.1"
+  - DJANGO="Django>=2.0,<2.1"
 # - DJANGO="git+https://github.com/django/django.git@master#egg=django"
 matrix:
   # @see https://docs.djangoproject.com/en/dev/releases/2.0/#python-compatibility
