fix travis matrix to exclude Py3.4+Dj2.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ matrix:
     env: DJANGO="Django>=2.0,<2.1"
   - python: "2.7"
     env: DJANGO="Django>=2.1,<2.2"
+  - python: "3.4"
+    env: DJANGO="Django>=2.1,<2.2"
 addons:
   postgresql: "9.5"
   apt:
