--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ addons:
 install:
   - pip install $DJANGO
   - pip install psycopg2
-  - pip install -e .[test]
+  - pip install .[test]
   - pip install coveralls
 before_script:
   - createdb -U postgres template_postgis
