chore: Move .coveragerc and tox.ini into setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,3 +25,20 @@ exclude = boundaries.tests
 [options.extras_require]
 test =
     testfixtures
+
+[flake8]
+exclude = boundaries/migrations
+extend-ignore =
+    # E124 closing bracket does not match visual indentation
+    E124,
+    # E128 continuation line under-indented for visual indent
+    E128,
+    # E501 line too long (X > 79 characters)
+    E501,
+    # F403 'from xyz import *' used; unable to detect undefined names
+    F403
+
+[coverage:report]
+omit =
+  */migrations/*
+  */tests/*
