--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,10 @@ exclude = boundaries.tests
 test =
     testfixtures
 
+[isort]
+line_length = 119
+profile = black
+
 [flake8]
 exclude = boundaries/migrations
 extend-ignore =
