--- a/setup.cfg
+++ b/setup.cfg
@@ -31,10 +31,10 @@ line_length = 119
 profile = black
 
 [flake8]
+max-line-length = 119
 exclude = boundaries/migrations
-extend-ignore =
-    # E501 line too long (X > 79 characters)
-    E501
+per-file-ignores =
+    boundaries/tests/*: E501
 
 [coverage:report]
 omit =
