build: Add long_description_content_type

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ license = MIT
 description = A web API to geographic boundaries loaded from shapefiles, packaged as a Django app.
 url = https://opennorth.github.io/represent-boundaries-docs/
 long_description = file: README.rst
+long_description_content_type = text/x-rst
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
